# helvetra-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 3db35003b8e1_add_feedback_table.py  5dde9735e4fe_add_users_and_subscriptions_tables.py  a1b2c3d4e5f6_add_stripe_support.py  a7b8c9d0e1f2_add_usage_alert_flags.py  b8c9d0e1f2a3_webhook_events_payload_to_jsonb.py  b9c9f076fcbe_add_usage_and_credits_tables.py  c3a8f2e91d7a_add_email_verification_tokens_table.py  d4b5c6e7f8a9_add_webhook_events_table.py  e5f6a7b8c9d0_add_b2b_subscription_product.py  f6a7b8c9d0e1_add_api_keys_table.py
app/: __init__.py  config.py  main.py
app/api/: __init__.py  dependencies.py  public_docs.py
app/api/routes/: __init__.py  (+10 more)
app/core/: __init__.py  database.py  errors.py  middleware.py  tiers.py
app/models/: __init__.py  api_key.py  feedback.py  subscription.py  user.py  webhook.py
app/schemas/: __init__.py  auth.py  feedback.py  subscription.py  translate.py
app/services/: api_key.py  apple_auth.py  apple_storekit.py  audit_log.py  auth.py  auth_rate_limiter.py  csrf.py  email.py  email_verification.py  language_detection.py  payrexx.py  rate_limiter.py  stripe_b2b.py  stripe_service.py  subscription.py  translation.py  usage_alerts.py  usage_tracker.py  webhook_events.py
tests/: __init__.py  conftest.py  test_auth.py  test_error_envelope.py  test_feedback.py  test_health.py  test_languages.py  test_optional_auth.py  test_rate_limit.py  test_stripe_b2b.py  test_tiers.py  test_translate.py  test_webhooks.py
