[project]
name = "helvetra-backend"
version = "0.1.0"
description = "Helvetra translation API backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "redis>=5.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "greenlet>=3.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.12.0",
    "bcrypt>=4.0.0",
    "pyjwt[crypto]>=2.8.0",
    # Kept until app/services/apple_storekit.py is rewritten against
    # app-store-server-library (helvetra/backend#94). All other uses
    # have moved to PyJWT.
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.0.0",
    "langdetect>=1.0.9",
    "cachetools>=5.3.0",
    "stripe>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
